Fixed header-text not margined properly from top and hiding behind nav bar

--- a/frontend_react/src/App.scss
+++ b/frontend_react/src/App.scss
@@ -63,6 +63,7 @@
 	text-align: center;
 	color: var(--black-color);
 	text-transform: capitalize;
+	margin: 2rem auto;
 
 	span {
 		color: var(--secondary-color);
